@@ -3,6 +3,7 @@
     * Made template reference parsing greedier - parse everything
     up to the next whitespace, newline, '[', ']', '$' or '#'
     * Printing of warnings to stderr can be disabled
+    * Added conditional statements (if-then, if-then-else)
 
 2013-02-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
